WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100830
[Chromium] Page popup shows up at wrong locations when root view is scrolled
https://bugs.webkit.org/show_bug.cgi?id=100830
Summary
[Chromium] Page popup shows up at wrong locations when root view is scrolled
Keishi Hattori
Reported
2012-10-31 01:44:07 PDT
Page popup shows up at wrong locations when root view is scrolled
http://demo.agektmr.com/datalist
Attachments
Patch
(1.79 KB, patch)
2012-10-31 02:15 PDT
,
Keishi Hattori
no flags
Details
Formatted Diff
Diff
Patch
(1.80 KB, patch)
2012-10-31 02:56 PDT
,
Keishi Hattori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Keishi Hattori
Comment 1
2012-10-31 02:15:49 PDT
Created
attachment 171602
[details]
Patch
Kent Tamura
Comment 2
2012-10-31 02:31:05 PDT
Comment on
attachment 171602
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=171602&action=review
> Source/WebKit/chromium/ChangeLog:3 > + Page popup shows up at wrong locations when root view is scrolled
Please prepend "[Chromium]" because this is a chromium-only change.
Kent Tamura
Comment 3
2012-10-31 02:33:19 PDT
We need to file a Chromium issue to handle merge request.
Keishi Hattori
Comment 4
2012-10-31 02:56:07 PDT
Created
attachment 171606
[details]
Patch
WebKit Review Bot
Comment 5
2012-11-01 00:01:22 PDT
Comment on
attachment 171606
[details]
Patch Clearing flags on attachment: 171606 Committed
r133132
: <
http://trac.webkit.org/changeset/133132
>
WebKit Review Bot
Comment 6
2012-11-01 00:01:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug