[Chromium] Page popup shows up at wrong locations when root view is scrolled https://bugs.webkit.org/show_bug.cgi?id=100830

Reviewed by Kent Tamura.

We need to account for the scroll position when calculating the root view rectangle in the screen.

* src/DateTimeChooserImpl.cpp:
(WebKit::DateTimeChooserImpl::writeDocument):


Canonical link: https://commits.webkit.org/118999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133132 268f45cc-cd09-0410-ab3c-d52691b4dbfc